[project]
name = "tf-extensions"
version = "0.1.0"
description = ""
authors = [
    {name = "AlbertFarkhutdinov",email = "albertfarhutdinov@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9,<3.12"
dependencies = [
    "keras (<2.15)",
    "numpy (<1.24)",
    "tensorflow (<2.15)",
    "tensorflow-intel (<2.15) ; sys_platform == 'win32'",
    "tensorflow-io-gcs-filesystem (<0.32.0) ; sys_platform == 'win32'",
]

[tool.poetry]
packages = [{include = "tf_extensions", from = "src"}]

[tool.poetry.group.dev.dependencies]
flake8-annotations = "~3.1"
flake8-awesome = "~1.3"
pylint = "~3.2"
pytest = "~8.3"
pytest-cov = "~6.0"
wemake-python-styleguide = "<1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
